Make a start on SVG output, by copying the Fig stuff.

--- a/configure.ac
+++ b/configure.ac
@@ -96,6 +96,7 @@ man/Makefile
 progs/Makefile
 src/Makefile
 src/libfig/Makefile
+src/libsvg/Makefile
 src/libvars/Makefile
 tests/Makefile
 win32/Makefile
