--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,18 +1,18 @@
 ## Automake template for ifm.
 
-SUBDIRS = libfig libvars
+SUBDIRS = libfig libsvg libvars
 
 bin_PROGRAMS = ifm
 
 SRCS = ifm-dot.c ifm-fig.c ifm-format.c ifm-main.c ifm-map.c ifm-path.c	\
-ifm-ps.c ifm-raw.c ifm-rec.c ifm-task.c ifm-text.c ifm-tk.c ifm-util.c	\
-ifm-vars.c ifm-yaml.c
+ifm-ps.c ifm-raw.c ifm-rec.c ifm-svg.c ifm-task.c ifm-text.c ifm-tk.c	\
+ifm-util.c ifm-vars.c ifm-yaml.c
 
 NOLINT_SRCS = ifm-parse.y ifm-scan.l
 
 HDRS = ifm-dot.h ifm-fig.h ifm-format.h ifm-main.h ifm-map.h ifm-parse.h \
-ifm-path.h ifm-ps.h ifm-raw.h ifm-rec.h ifm-task.h ifm-text.h ifm-tk.h	 \
-ifm-util.h ifm-vars.h ifm-yaml.h
+ifm-path.h ifm-ps.h ifm-raw.h ifm-rec.h ifm-svg.h ifm-task.h ifm-text.h	 \
+ifm-tk.h ifm-util.h ifm-vars.h ifm-yaml.h
 
 ifm_SOURCES = $(SRCS) $(NOLINT_SRCS) $(HDRS)
 
@@ -21,11 +21,14 @@ EXTRA_DIST = ifm-parse.c ifm-scan.c
 FIG_SRC = $(top_srcdir)/src/libfig
 FIG_BIN = $(top_builddir)/src/libfig
 
+SVG_SRC = $(top_srcdir)/src/libsvg
+SVG_BIN = $(top_builddir)/src/libsvg
+
 VARS_SRC = $(top_srcdir)/src/libvars
 VARS_BIN = $(top_builddir)/src/libvars
 
-ifm_LDFLAGS = -L$(FIG_BIN) -L$(VARS_BIN)
-ifm_LDADD   = -lfig -lvars -lm
+ifm_LDFLAGS = -L$(FIG_BIN) -L$(SVG_BIN) -L$(VARS_BIN)
+ifm_LDADD   = -lfig -lsvg -lvars -lm
 
 AM_YFLAGS = -d -v
 
@@ -36,9 +39,10 @@ IFMDEFS = -DIFMLIB=$(pkgdatadir)
 endif
 
 AM_CFLAGS = $(LOCAL_CFLAGS)
-AM_CPPFLAGS = -I$(FIG_SRC) -I$(VARS_SRC) $(IFMDEFS) -DHGVERSION="\"$(HGVERSION)\""
+AM_CPPFLAGS = -I$(FIG_SRC) -I$(SVG_SRC) -I$(VARS_SRC) $(IFMDEFS)	\
+-DHGVERSION="\"$(HGVERSION)\""
 
-$(bin_PROGRAMS): $(VARS_BIN)/libvars.a $(FIG_BIN)/libfig.a
+$(bin_PROGRAMS): $(VARS_BIN)/libvars.a $(FIG_BIN)/libfig.a $(SVG_BIN)/libsvg.a
 
 ifm-parse.h: ifm-parse.c
 
